--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-simple-sidenav": "^1.0.1",
-    "react-slick": "^0.23.2"
+    "react-slick": "^0.23.2",
+    "react-transition-group": "^2.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
