--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "draft-js": "^0.10.4",
+    "draft-js-export-html": "^1.2.0",
     "firebase": "^4.8.1",
+    "moment": "^2.20.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-draft-wysiwyg": "^1.12.1",
+    "react-firebase-file-uploader": "^2.4.1",
     "react-fontawesome": "^1.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
